<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_asignatura"
            android:icon="@drawable/ic_asignatura_paste_black_24dp"
            android:title="@string/nav_asignaturas"/>


        <item
            android:id="@+id/nav_ecuenta"
            android:icon="@drawable/ic_estadocuenta_money_black_24dp"
            android:title="@string/nav_ecuenta" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_action_config_24dp"
            android:title="@string/nav_config" />

      <item
        android:id="@+id/nav_administrarCuenta"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/nav_adminCuenta" />

    </group>

    <item android:title="Communicate">
        <menu>

        </menu>
    </item>

</menu>
